# Dev

./: .gitignore
Cscripts/: comp.c  example  example.c  parser  parser.c  piled  progress_bar  progress_bar.c
Cscripts/bmp_parser/: parser
Cscripts/game/: game  main.c
Cscripts/parsers/bmp_coder/: coder  coder.c
Cscripts/parsers/bmp_parser/: parser
Cscripts/phy_ascii/: main.c  phy
Cscripts/powdr/: main.c  powder
Cscripts/ppm/: output.ppm  ppm  ppm.c
bashscripts/: ascii.sh  ascii_bmp.sh  builtin.sh  comp.sh  disply.sh  example.sh  example.tga  file.not  hngman.sh  input.tga  main.sh  rps.sh  snake.sh
bashscripts/ascii_parsers/: ascii_bmp.sh
bashscripts/custom_langauge?/: compiler.sh  file.not
bashscripts/games/: disply.sh  gamble.sh  horsrace.sh  rps.sh  snake.sh  tetris.sh
bashscripts/other/: example.html  html_parser.sh  test.sh
bashscripts/other/previous_design/: example.html  test.sh
bashscripts/primitive_interpreter/: file.not
bashscripts/tools/: bubble.sh  builtin.sh  calc.sh  droll.sh  main.sh  temp.sh  timer.sh
c++scripts/: example  main.cpp
c++scripts/learning/include/glad/: glad.h
c++scripts/opengl_learning/: main.cpp
c++scripts/random_game/: CMakeLists.txt
c++scripts/unfinished/opengl_learning/: CMakeLists.txt  main.cpp
c++scripts/unfinished/opengl_learning/src/: glad.c
c++scripts/unfinished/random_game/: CMakeLists.txt  main.cpp
rust/file-manager-tui/: Cargo.toml
rust/file-manager-tui/src/: main  main.rs
